--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Google</title>
+  <script src="https://kit.fontawesome.com/124339312d.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+
+  <header>
+    <div class="bloc1">
+      <div class="topbarbutton">
+        <div> <a href="https://mail.google.com/mail/?authuser=0&ogbl">Gmail</a></div>
+        <div><a href="https://www.google.fr/imghp?hl=fr&authuser=0&ogbl">Images</a></div>
+      </div>
+      <div class="topbarlogo">
+        <div class="topbarmenu">
+          <svg preserveAspectRatio="xMidYMin" width="40" height="40" focusable="false" viewBox="-5 -5 35 35">
+            <path
+              d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z">
+            </path>
+          </svg>
+        </div>
+        <div class="topbaraccount">
+          <div><button>Connexion</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+
+  <section class="wrapper">
+    <!--BLOC2-->
+
+    <div class="bloc2">
+      <img src="images/googlelogo_light_color_272x92.png" alt="Google">
+    </div>
+
+    <div class="form">
+      <input type="text">
+      <label><i class="fa-solid fa-microphone"></i></label>
+      <label><i class="fa-solid fa-magnifying-glass"></i></label>
+    </div>
+
+    <div class="formbutton">
+      <button>Recherche google</button>
+      <button>J'ai de la chance</button>
+    </div>
+
+
+
+
+    <!--BLOC4-->
+
+    <div class="bloc4">
+      <p>Google disponible en : <a
+          href="https://www.google.fr/setprefs?sig=0_hmXM37nLGjN3BYWAfyuFpZTX-C8%3D&hl=en&source=homepage&sa=X&ved=0ahUKEwj1v9Dv-Pz2AhVS14UKHalPBNoQ2ZgBCBA">English</a>
+      </p>
+    </div>
+
+
+  </section>
+
+</body>
+
+<footer>
+  <div class="bloc5">
+    <div class="pays">
+      <p>France</p>
+    </div>
+    <div class="footmenu">
+      <div class="about">
+        <a href="https://about.google/?utm_source=google-FR&utm_medium=referral&utm_campaign=hp-footer&fg=1">À
+          propos</a>
+        <a
+          href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicité</a>
+        <a
+          href="https://smallbusiness.withgoogle.com/intl/fr_fr/?subid=fr-fr-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=fr-fr-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Entreprise</a>
+        <a href="https://www.google.com/search/howsearchworks/?fg=1"> Comment fonctionne la recherche Google ? </a>
+      </div>
+
+      <div class="footcarbone">
+        <a href="https://about.google/?utm_source=google-FR&utm_medium=referral&utm_campaign=hp-footer&fg=1"><img
+            src="images/leaf.png" alt="leaf"> Neutre en carbone depuis 2007</a>
+      </div>
+
+      <div class="footend">
+        <a href="https://support.google.com/legal/answer/3110420?hl=fr&fg=1">Signaler un contenu inapproprié</a>
+        <a
+          href="https://support.google.com/websearch/answer/7585859?p=fr_consumer_info&hl=fr&fg=1&visit_id=637847535819994740-4019681488&rd=1">Info
+          consommateurs</a>
+        <a href="https://policies.google.com/privacy?hl=fr&fg=1">Confidentialité</a>
+        <a href="https://policies.google.com/terms?hl=fr&fg=1">Conditions</a>
+        <a href="https://">Paramètres</a>
+      </div>
+    </div>
+
+
+  </div>
+
+</footer>
+
+</html>
