--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Google</title>
   <script src="https://kit.fontawesome.com/124339312d.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
     <!--BLOC2-->
 
     <div class="bloc2">
-      <img src="images/googlelogo_light_color_272x92.png" alt="Google">
+      <img src="googlelogo_light_color_272x92.png" alt="Google">
     </div>
 
     <div class="form">
@@ -84,7 +84,7 @@
 
       <div class="footcarbone">
         <a href="https://about.google/?utm_source=google-FR&utm_medium=referral&utm_campaign=hp-footer&fg=1"><img
-            src="images/leaf.png" alt="leaf"> Neutre en carbone depuis 2007</a>
+            src="leaf.png" alt="leaf"> Neutre en carbone depuis 2007</a>
       </div>
 
       <div class="footend">
